src/objects/UniqueEntry__Custom_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>UniqueEntry__Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Custom Field Mapping</label>
    <listViews>
        <fullName>UniqueEntry__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>